feat: 實現 deapi.ai 圖片生成 MCP Server 並成功產圖
- 實現完整的 deapi-txt2img MCP Server，包含生成、查詢、下載功能
- 成功生成 4 張 AI 圖片展示成果（咖啡、開發環境、工作流程、成功慶祝）
- 實現 metadata 管理系統，自動保存生成參數，支持搜索和再利用
- 新增 search_generated_images 工具，可根據提示詞、模型、標籤搜索圖片
- 創建文章記錄完整開發過程和 AI 產圖成果
- 更新 .gitignore 確保敏感文件不被提交
- 所有圖片 metadata 已保存，方便未來搜索和再利用

--- a/content/processed/installing-mcp-servers.en.html
+++ b/content/processed/installing-mcp-servers.en.html
@@ -169,7 +169,7 @@
 
 <h2>Setup Screenshot</h2>
 
-<p><img src="/mcp-servers.png" alt="Installed MCP Servers"></p>
+<p><img src="/images/mcp-servers.png" alt="Installed MCP Servers"></p>
 
 <h2>Real-World Use Cases</h2>
 
