--- a/content/processed/installing-mcp-servers.html
+++ b/content/processed/installing-mcp-servers.html
@@ -177,7 +177,7 @@
 
 <h2>設置截圖</h2>
 
-<p><img src="/mcp-servers.png" alt="已安裝的 MCP Servers"></p>
+<p><img src="/images/mcp-servers.png" alt="已安裝的 MCP Servers"></p>
 
 <h2>實際應用案例</h2>
 
