--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/png" href="/images/vibeblog-icon.png" />
+		<meta name="theme-color" content="#0066cc" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
