--- a/content/processed/tsmc-latest-research-report.en.html
+++ b/content/processed/tsmc-latest-research-report.en.html
@@ -1,18 +1,18 @@
 <h1>TSMC Latest Research Report: The Semiconductor Giant Driven by AI</h1>
-<p>Taiwan Semiconductor Manufacturing Company (TSMC), as the absolute leader in the global semiconductor foundry industry, demonstrated strong financial performance and technological leadership in Q1 2025. This report provides an in-depth analysis of TSMC&#39;s latest operational status, technological developments, and future outlook.</p>
+<p>Taiwan Semiconductor Manufacturing Company (TSMC), as the absolute leader in the global semiconductor foundry industry, demonstrated strong financial performance and technological leadership in Q1 2025. This report provides an in-depth analysis of TSMC's latest operational status, technological developments, and future outlook.</p>
 <h2>Strong Q1 2025 Financial Performance</h2>
 
-<p>In Q1 2025, TSMC&#39;s consolidated revenue reached <strong>NT$ 839.25 billion</strong>, representing a year-over-year growth of <strong>41.6%</strong> despite a sequential decline of 3.4% (mainly due to earthquake impact), demonstrating the company&#39;s continued strong growth momentum.</p>
+<p>In Q1 2025, TSMC's consolidated revenue reached <strong>NT$ 839.25 billion</strong>, representing a year-over-year growth of <strong>41.6%</strong> despite a sequential decline of 3.4% (mainly due to earthquake impact), demonstrating the company's continued strong growth momentum.</p>
 <h3>Profitability Remains High</h3>
 <ul>
 <li><strong>Net Profit After Tax</strong>: NT$ 361.56 billion, up <strong>60.3%</strong> year-over-year</li>
 <li><strong>Earnings Per Share (EPS)</strong>: NT$ <strong>13.94</strong></li>
-<li><strong>Gross Margin</strong>: <strong>58.8%</strong>, slightly lower than the previous quarter&#39;s 59%, but still maintaining a high level</li>
+<li><strong>Gross Margin</strong>: <strong>58.8%</strong>, slightly lower than the previous quarter's 59%, but still maintaining a high level</li>
 </ul>
-<p>Despite the earthquake impact in Q1 that damaged some production capacity, TSMC&#39;s profitability remains strong, demonstrating the company&#39;s excellent performance in cost control and operational efficiency.</p>
+<p>Despite the earthquake impact in Q1 that damaged some production capacity, TSMC's profitability remains strong, demonstrating the company's excellent performance in cost control and operational efficiency.</p>
 <h2>AI Demand as Primary Growth Driver</h2>
-<p><img src="/images/ai-generated/tsmc-ai-growth.png" alt="AI Driving TSMC Growth"></p>
-<p>Strong AI demand has become TSMC&#39;s most important growth engine. According to company forecasts, <strong>AI-related revenue is expected to double in 2025</strong>, with a five-year compound annual growth rate (CAGR) of up to <strong>46%</strong>.</p>
+
+<p>Strong AI demand has become TSMC's most important growth engine. According to company forecasts, <strong>AI-related revenue is expected to double in 2025</strong>, with a five-year compound annual growth rate (CAGR) of up to <strong>46%</strong>.</p>
 <h3>High-Performance Computing (HPC) Business Share Continues to Expand</h3>
 <ul>
 <li><strong>2020</strong>: HPC business accounted for <strong>33%</strong> of revenue</li>
@@ -21,7 +21,7 @@
 </ul>
 <p>This trend clearly shows that generative AI and large-scale computing demands are continuing to grow, and TSMC is one of the biggest beneficiaries of this AI wave.</p>
 <h3>Major Customers Driving Growth</h3>
-<p>TSMC&#39;s major customers such as Nvidia and AMD hold high market share in the AI chip market, further consolidating TSMC&#39;s leading position in the AI field. The strong demand for advanced processes and high-end packaging technologies from these customers provides TSMC with stable growth momentum.</p>
+<p>TSMC's major customers such as Nvidia and AMD hold high market share in the AI chip market, further consolidating TSMC's leading position in the AI field. The strong demand for advanced processes and high-end packaging technologies from these customers provides TSMC with stable growth momentum.</p>
 <h2>Advanced Process Technology Continues to Lead</h2>
 <p>TSMC continues to maintain its global leading position in advanced process technology, particularly in 3nm and 5nm process technologies.</p>
 <h3>Process Technology Development Roadmap</h3>
@@ -32,13 +32,13 @@
 </ul>
 <h3>High-End Packaging Technology Expansion</h3>
 <p>TSMC is actively expanding <strong>CoWoS (Chip-on-Wafer-on-Substrate)</strong> high-end packaging capacity. This technology can integrate multiple chips, significantly improving the computing efficiency and performance density of AI chips.</p>
-<p><img src="/images/ai-generated/tsmc-advanced-packaging.png" alt="TSMC Advanced Packaging Technology"></p>
+<p><img alt="TSMC Advanced Packaging Technology" src="/images/ai-generated/tsmc-advanced-packaging.png" /></p>
 <p>Additionally, TSMC plans to introduce more advanced packaging technologies:</p>
 <ul>
 <li><strong>CPO (Co-Packaged Optics)</strong>: Integrating optical components with chips to improve data transmission efficiency</li>
 <li><strong>FOPLP (Fan-Out Panel-Level Packaging)</strong>: Using panel-level processes to reduce costs and increase capacity</li>
 </ul>
-<p>These technologies will ensure TSMC&#39;s core position in the AI chip ecosystem.</p>
+<p>These technologies will ensure TSMC's core position in the AI chip ecosystem.</p>
 <h2>Global Expansion Strategy</h2>
 <p>TSMC is actively expanding its global footprint to meet global customer demands and diversify geopolitical risks.</p>
 <h3>Overseas Expansion Plans</h3>
@@ -57,34 +57,34 @@
 <p>Despite this, TSMC remains optimistic about its growth prospects, expecting continued healthy growth driven by AI demand.</p>
 <h2>Market Outlook and Investment Opportunities</h2>
 <h3>Industry Growth Expectations</h3>
-<p>According to Counterpoint Research&#39;s report, the AI wave has ignited demand for advanced semiconductor processes. <strong>Global foundry industry output is expected to grow 20% year-over-year in 2025</strong>, and TSMC, as the industry leader, is expected to outperform the industry average growth rate.</p>
+<p>According to Counterpoint Research's report, the AI wave has ignited demand for advanced semiconductor processes. <strong>Global foundry industry output is expected to grow 20% year-over-year in 2025</strong>, and TSMC, as the industry leader, is expected to outperform the industry average growth rate.</p>
 <h3>Analyst Forecasts</h3>
-<p>Stifel&#39;s research report indicates:</p>
+<p>Stifel's research report indicates:</p>
 <ul>
 <li>TSMC maintains its 2025 capital expenditure plan, with a median year-over-year growth of <strong>34%</strong></li>
 <li>Raised 2025 revenue growth forecast from <strong>20%</strong> to <strong>30%</strong></li>
 <li>Mainly driven by AI and high-performance computing (HPC) sectors</li>
 </ul>
 <h3>Investment Strategy Recommendations</h3>
-<p>Although TSMC shows strong growth in technology and business, the market&#39;s reaction to its stock price is relatively conservative, mainly due to:</p>
+<p>Although TSMC shows strong growth in technology and business, the market's reaction to its stock price is relatively conservative, mainly due to:</p>
 <ul>
 <li>U.S. tariff policies</li>
 <li>Rising overseas expansion costs</li>
 <li>Geopolitical risks</li>
 </ul>
-<p>However, analysts believe that if the stock price retraces close to previous lows without breaking through, it may be a &quot;second leg&quot; buying opportunity, indicating that TSMC&#39;s investment value is gradually emerging.</p>
-<p><img src="/images/ai-generated/tsmc-investment-outlook.png" alt="TSMC Investment Outlook"></p>
+<p>However, analysts believe that if the stock price retraces close to previous lows without breaking through, it may be a "second leg" buying opportunity, indicating that TSMC's investment value is gradually emerging.</p>
+<p><img alt="TSMC Investment Outlook" src="/images/ai-generated/tsmc-investment-outlook.png" /></p>
 <h2>Risk Factors</h2>
 <p>Investors need to pay attention to the following risk factors:</p>
 <ol>
-<li><strong>Geopolitical Risks</strong>: Continued U.S.-China tech war may affect TSMC&#39;s business development</li>
+<li><strong>Geopolitical Risks</strong>: Continued U.S.-China tech war may affect TSMC's business development</li>
 <li><strong>Overseas Expansion Costs</strong>: Overseas fab construction costs are higher than in Taiwan, potentially compressing gross margins</li>
 <li><strong>Rising Power Costs</strong>: Rising global power costs are putting pressure on operating costs</li>
 <li><strong>Intensifying Competition</strong>: Competitors such as Samsung and Intel continue to catch up</li>
 <li><strong>Cyclical Risks</strong>: The semiconductor industry is cyclical and may be affected by macroeconomic conditions</li>
 </ol>
 <h2>Conclusion</h2>
-<p>TSMC demonstrated strong financial performance in Q1 2025, with revenue and profits showing significant growth, particularly driven by AI demand. The company&#39;s leading position in advanced processes and high-end packaging technologies, along with its aggressive global expansion strategy, provides a solid foundation for future development.</p>
-<p>Despite challenges such as geopolitical risks, overseas expansion costs, and intensifying competition, TSMC&#39;s core position in the AI field and technological advantages position it to maintain strong growth in the coming years. Investors may consider buying opportunities during stock price retracements, especially when the price approaches previous lows without breaking through, which may be a &quot;second leg&quot; golden buying opportunity.</p>
-<hr>
+<p>TSMC demonstrated strong financial performance in Q1 2025, with revenue and profits showing significant growth, particularly driven by AI demand. The company's leading position in advanced processes and high-end packaging technologies, along with its aggressive global expansion strategy, provides a solid foundation for future development.</p>
+<p>Despite challenges such as geopolitical risks, overseas expansion costs, and intensifying competition, TSMC's core position in the AI field and technological advantages position it to maintain strong growth in the coming years. Investors may consider buying opportunities during stock price retracements, especially when the price approaches previous lows without breaking through, which may be a "second leg" golden buying opportunity.</p>
+<hr />
 <p><em>This report is compiled based on publicly available information. Please carefully assess risks when making investment decisions.</em></p>
