--- a/content/processed/tsmc-latest-research-report.html
+++ b/content/processed/tsmc-latest-research-report.html
@@ -11,7 +11,7 @@
 </ul>
 <p>儘管第一季受到地震影響，導致部分產能受損，但台積電的獲利能力依然強勁，顯示公司在成本控制和營運效率方面的卓越表現。</p>
 <h2>AI 需求成為主要成長動能</h2>
-<p><img src="/images/ai-generated/tsmc-ai-growth.png" alt="AI 驅動台積電成長"></p>
+
 <p>AI 需求強勁已成為台積電最重要的成長引擎。根據公司預測，<strong>2025 年 AI 相關營收預計翻倍成長</strong>，五年複合成長率（CAGR）上看 <strong>46%</strong>。</p>
 <h3>高效能運算（HPC）業務占比持續擴大</h3>
 <ul>
@@ -32,7 +32,7 @@
 </ul>
 <h3>高階封裝技術擴充</h3>
 <p>台積電積極擴充 <strong>CoWoS（Chip-on-Wafer-on-Substrate）</strong> 高階封裝產能，該技術可將多顆晶片整合，顯著提升 AI 晶片的運算效率與效能密度。</p>
-<p><img src="/images/ai-generated/tsmc-advanced-packaging.png" alt="台積電先進封裝技術"></p>
+<p><img alt="台積電先進封裝技術" src="/images/ai-generated/tsmc-advanced-packaging.png" /></p>
 <p>此外，台積電計劃導入更先進的封裝技術：</p>
 <ul>
 <li><strong>CPO（共同封裝光學）</strong>：整合光學元件與晶片，提升資料傳輸效率</li>
@@ -73,7 +73,7 @@
 <li>地緣政治風險</li>
 </ul>
 <p>然而，分析師認為，若股價回檔接近前波低點但未跌破，可能是「打第二隻腳」的布局時機，顯示台積電的投資價值正逐步浮現。</p>
-<p><img src="/images/ai-generated/tsmc-investment-outlook.png" alt="台積電投資展望"></p>
+<p><img alt="台積電投資展望" src="/images/ai-generated/tsmc-investment-outlook.png" /></p>
 <h2>風險因素</h2>
 <p>投資者需要關注以下風險因素：</p>
 <ol>
@@ -86,5 +86,5 @@
 <h2>結論</h2>
 <p>台積電在 2025 年第一季展現出強勁的財務表現，特別是在 AI 需求驅動下，營收和獲利都呈現大幅成長。公司在先進製程和高階封裝技術方面的領先地位，以及積極的全球佈局策略，為未來發展提供了堅實基礎。</p>
 <p>儘管面臨地緣政治風險、海外擴產成本和競爭加劇等挑戰，但台積電在 AI 領域的核心地位和技術優勢，使其在未來幾年仍有望維持強勁成長。投資者可關注股價回檔時的布局機會，特別是在股價接近前波低點但未破時，可能是「打第二隻腳」的黃金買點。</p>
-<hr>
+<hr />
 <p><em>本報告基於公開資訊整理，投資決策請謹慎評估風險。</em></p>
